--- a/assets/css/settings-password.css
+++ b/assets/css/settings-password.css
@@ -313,3 +313,25 @@ input[type="text"].password-input {
 .verify-btnSet:hover {
   background-color: #6e9ca1; /* Darker on hover */
 }
+
+
+
+/* MODAL ACCOUNT DELETION */
+.confirm-btnDelete {
+  position: absolute;
+  left: 50%;        /* Center horizontally */
+  bottom: 10px;     /* Adjust as needed for vertical positioning */
+  transform: translateX(-50%); /* Offset to truly center */
+  background-color: #95c0c5;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.confirm-btnDelete:hover {
+  background-color: #6e9ca1;
+}
+
