--- a/assets/css/mainTheme.css
+++ b/assets/css/mainTheme.css
@@ -354,3 +354,26 @@ html {
   height: 100%;
   border-radius: 0px 25px 25px 0px;
 }
+
+
+.sysad {
+  margin-top: -30%;
+  margin-left: 0;
+  float: left;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.sysadButton {
+  width: 40px;
+  height: 100px;
+  float: left;
+  background-color: #3498db00; /* fully transparent */
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.sysadButton:hover {
+  transform: translateY(-5px);
+  filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.2));
+}
