--- a/assets/css/members.css
+++ b/assets/css/members.css
@@ -106,7 +106,11 @@
 .rightContMem {
     flex: 1;
     padding-left: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 
 .profile-pic {
     width: 80px;
