--- a/assets/css/members.css
+++ b/assets/css/members.css
@@ -3,6 +3,7 @@
     width: 92%;
     height: 100%;
     background-color: rgba(162, 162, 162, 0);
+    font-family: "Poppins", sans-serif;
 }
 
 .membersCont {
