--- a/assets/css/FirstFloor-Garage.css
+++ b/assets/css/FirstFloor-Garage.css
@@ -264,11 +264,15 @@ background-color: rgba(255, 0, 0, 0);
   font-weight: 400;
   font-size: 0.9rem;
   padding-left: 10px; /* Small padding to move it slightly right */
-  width: 75%; /* Control its width */
+  width: 90% !important; /* Increase the width for testing */
   background-color: rgba(0, 0, 255, 0);
+  
+  /* Added styles for ellipsis */
+  display: inline-block; /* Change display to inline-block */
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide the overflowed text */
+  text-overflow: ellipsis; /* Add ellipsis when content overflows */
 }
-
-
 
 /* Floating button inside */
 .downloadBtn {
