--- a/assets/css/FirstFloor-Garage.css
+++ b/assets/css/FirstFloor-Garage.css
@@ -274,6 +274,12 @@ background-color: rgba(255, 0, 0, 0);
   text-overflow: ellipsis; /* Add ellipsis when content overflows */
 }
 
+/* Hover effect */
+.ffuserLog:hover {
+  white-space: normal; /* Allow text to wrap */
+  overflow: visible; /* Make the overflowed text visible */
+  background-color: rgba(0, 0, 255, 0); /* Optional: Add a slight background color change for better visibility */
+}
 /* Floating button inside */
 .downloadBtn {
   position: absolute;
