--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -209,7 +209,7 @@ body {
   display: none;
   position: absolute;
   top: 100%;
-  width: 93%;
+  width: 100px !important;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
