--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -206,10 +206,10 @@ body {
 }
 
 .error-message {
-  display: none;
+  display: inline-block;
   position: absolute;
   top: 100%;
-  width: 100px !important;
+  max-width: 100px;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
@@ -219,6 +219,6 @@ body {
   border-radius: 15px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  white-space: normal;
+  word-wrap: break-word;
 }
-
-
