--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -205,7 +205,7 @@ body {
   background-color: #28a745;
 }
 
-.error-message {
+.error-messages {
   display: inline-block;
   position: absolute;
   top: 100%;
