--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -209,7 +209,8 @@ body {
   display: inline-block;
   position: absolute;
   top: 100%;
-  max-width: 100px;
+  margin-left: 10%;
+  max-width: 100%;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
