--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -205,12 +205,12 @@ body {
   background-color: #28a745;
 }
 
-.error-messages {
+.error-message {
   display: inline-block;
   position: absolute;
   top: 100%;
-  margin-left: 10%;
-  max-width: 100%;
+  margin-left: 20%;
+  max-width: 80%;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
