--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -206,11 +206,11 @@ body {
 }
 
 .error-message {
-  display: inline-block;
+  display: none;
   position: absolute;
   top: 100%;
   margin-left: 20%;
-  max-width: 80%;
+  width: 80% !important;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
@@ -220,6 +220,6 @@ body {
   border-radius: 15px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  white-space: normal;
-  word-wrap: break-word;
 }
+
+
