--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -209,8 +209,7 @@ body {
   display: none;
   position: absolute;
   top: 100%;
-  margin-left: 20%;
-  width: 80% !important;
+  width: 93%;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
