--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -144,9 +144,9 @@ body {
 .password-strength {
   position: absolute;
   top: 100%;
-  left: 0;
-  width: 93%;
-  background-color: #d9d9d9;
+  margin-left: 10%;
+  width: 70%;
+  background-color: green;
   text-align: left;
   font-size: 0.9rem;
   padding: 5px 10px;
@@ -209,8 +209,8 @@ body {
   display: none;
   position: absolute;
   top: 100%;
-  margin-left: 20%;
-  width: 80% !important;
+  margin-left: 15%;
+  width: 70% !important;
   background-color: #f8d7da;
   color: #d9534f;
   text-align: left;
@@ -221,5 +221,4 @@ body {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
 
