--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -144,9 +144,9 @@ body {
 .password-strength {
   position: absolute;
   top: 100%;
-  margin-left: 10%;
+  margin-left: 0%;
   width: 70%;
-  background-color: green;
+  background-color: rgb(255, 255, 255);
   text-align: left;
   font-size: 0.9rem;
   padding: 5px 10px;
