--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -146,7 +146,7 @@ body {
   top: 100%;
   margin-left: 0%;
   width: 70%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0);
   text-align: left;
   font-size: 0.9rem;
   padding: 5px 10px;
@@ -208,7 +208,7 @@ body {
 .error-message {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 90%;
   margin-left: 15%;
   width: 70% !important;
   background-color: #f8d7da;
